error.txt
  File "/home/runner/work/self-heal-CI-CD/self-heal-CI-CD/./bug.py", line 12
    calculate_area(radius
                  ^
SyntaxError: '(' was never closed
